--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "dependencies": {
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/fonts": "^0.11.4",
+    "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.11.10",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.13",
     "eslint": "^9.32.0",
     "gsap": "^3.13.0",
     "nuxt": "^4.0.1",
+    "pinia": "^3.0.3",
     "prettier": "^3.6.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
